--- a/overview-tree.html
+++ b/overview-tree.html
@@ -27,7 +27,6 @@ loadScripts(document, 'script');</script>
 <div class="top-nav" id="navbar-top">
 <div class="skip-nav"><a href="#skip-navbar-top" title="Skip navigation links">Skip navigation links</a></div>
 <ul id="navbar-top-firstrow" class="nav-list" title="Navigation">
-<li><a href="index.html">Overview</a></li>
 <li>Package</li>
 <li>Class</li>
 <li class="nav-bar-cell1-rev">Tree</li>
@@ -50,9 +49,7 @@ loadScripts(document, 'script');</script>
 <h1 class="title">Hierarchy For All Packages</h1>
 <span class="package-hierarchy-label">Package Hierarchies:</span>
 <ul class="horizontal">
-<li><a href="growthbook/sdk/java/package-tree.html">growthbook.sdk.java</a>, </li>
-<li><a href="growthbook/sdk/java/internal/services/package-tree.html">growthbook.sdk.java.internal.services</a>, </li>
-<li><a href="growthbook/sdk/java/models/package-tree.html">growthbook.sdk.java.models</a></li>
+<li><a href="growthbook/sdk/java/package-tree.html">growthbook.sdk.java</a></li>
 </ul>
 </div>
 <section class="hierarchy">
@@ -60,21 +57,16 @@ loadScripts(document, 'script');</script>
 <ul>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" class="type-name-link external-link" title="class or interface in java.lang">Object</a>
 <ul>
-<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/BucketRange.html" class="type-name-link" title="class in growthbook.sdk.java.models">BucketRange</a></li>
-<li class="circle">growthbook.sdk.java.internal.services.<a href="growthbook/sdk/java/internal/services/ConditionEvaluator.html" class="type-name-link" title="class in growthbook.sdk.java.internal.services">ConditionEvaluator</a></li>
-<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/Experiment.html" class="type-name-link" title="class in growthbook.sdk.java.models">Experiment</a>&lt;ValueType&gt;</li>
-<li class="circle">growthbook.sdk.java.internal.services.<a href="growthbook/sdk/java/internal/services/ExperimentEvaluator.html" class="type-name-link" title="class in growthbook.sdk.java.internal.services">ExperimentEvaluator</a></li>
-<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/ExperimentResult.html" class="type-name-link" title="class in growthbook.sdk.java.models">ExperimentResult</a>&lt;ValueType&gt;</li>
-<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/Feature.html" class="type-name-link" title="class in growthbook.sdk.java.models">Feature</a>&lt;ValueType&gt;</li>
-<li class="circle">growthbook.sdk.java.internal.services.<a href="growthbook/sdk/java/internal/services/FeatureEvaluator.html" class="type-name-link" title="class in growthbook.sdk.java.internal.services">FeatureEvaluator</a></li>
-<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/FeatureResult.html" class="type-name-link" title="class in growthbook.sdk.java.models">FeatureResult</a>&lt;ValueType&gt;</li>
-<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/FeatureRule.html" class="type-name-link" title="class in growthbook.sdk.java.models">FeatureRule</a>&lt;ValueType&gt;</li>
-<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/GBContext.html" class="type-name-link" title="class in growthbook.sdk.java.models">GBContext</a></li>
-<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/GBContext.GBContextBuilder.html" class="type-name-link" title="class in growthbook.sdk.java.models">GBContext.GBContextBuilder</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/BucketRange.html" class="type-name-link" title="class in growthbook.sdk.java">BucketRange</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Experiment.html" class="type-name-link" title="class in growthbook.sdk.java">Experiment</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/ExperimentResult.html" class="type-name-link" title="class in growthbook.sdk.java">ExperimentResult</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Feature.html" class="type-name-link" title="class in growthbook.sdk.java">Feature</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureResult.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureResult</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureRule.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureRule</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GBContext.html" class="type-name-link" title="class in growthbook.sdk.java">GBContext</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GBContext.GBContextBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">GBContext.GBContextBuilder</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GrowthBook.html" class="type-name-link" title="class in growthbook.sdk.java">GrowthBook</a></li>
-<li class="circle">growthbook.sdk.java.internal.services.<a href="growthbook/sdk/java/internal/services/GrowthBookJsonUtils.html" class="type-name-link" title="class in growthbook.sdk.java.internal.services">GrowthBookJsonUtils</a></li>
-<li class="circle">growthbook.sdk.java.internal.services.<a href="growthbook/sdk/java/internal/services/GrowthBookUtils.html" class="type-name-link" title="class in growthbook.sdk.java.internal.services">GrowthBookUtils</a></li>
-<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/Namespace.html" class="type-name-link" title="class in growthbook.sdk.java.models">Namespace</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Namespace.html" class="type-name-link" title="class in growthbook.sdk.java">Namespace</a></li>
 </ul>
 </li>
 </ul>
@@ -82,8 +74,8 @@ loadScripts(document, 'script');</script>
 <section class="hierarchy">
 <h2 title="Interface Hierarchy">Interface Hierarchy</h2>
 <ul>
-<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/ExperimentRunCallback.html" class="type-name-link" title="interface in growthbook.sdk.java.models">ExperimentRunCallback</a></li>
-<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/TrackingCallback.html" class="type-name-link" title="interface in growthbook.sdk.java.models">TrackingCallback</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/ExperimentRunCallback.html" class="type-name-link" title="interface in growthbook.sdk.java">ExperimentRunCallback</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/TrackingCallback.html" class="type-name-link" title="interface in growthbook.sdk.java">TrackingCallback</a></li>
 </ul>
 </section>
 <section class="hierarchy">
@@ -93,9 +85,9 @@ loadScripts(document, 'script');</script>
 <ul>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Enum.html" class="type-name-link external-link" title="class or interface in java.lang">Enum</a>&lt;E&gt; (implements java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Comparable.html" title="class or interface in java.lang" class="external-link">Comparable</a>&lt;T&gt;, java.lang.constant.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/constant/Constable.html" title="class or interface in java.lang.constant" class="external-link">Constable</a>, java.io.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/io/Serializable.html" title="class or interface in java.io" class="external-link">Serializable</a>)
 <ul>
-<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/DataType.html" class="type-name-link" title="enum class in growthbook.sdk.java.models">DataType</a></li>
-<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/FeatureResultSource.html" class="type-name-link" title="enum class in growthbook.sdk.java.models">FeatureResultSource</a></li>
-<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/Operator.html" class="type-name-link" title="enum class in growthbook.sdk.java.models">Operator</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/DataType.html" class="type-name-link" title="enum class in growthbook.sdk.java">DataType</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureResultSource.html" class="type-name-link" title="enum class in growthbook.sdk.java">FeatureResultSource</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Operator.html" class="type-name-link" title="enum class in growthbook.sdk.java">Operator</a></li>
 </ul>
 </li>
 </ul>
