--- a/growthbook/sdk/java/package-tree.html
+++ b/growthbook/sdk/java/package-tree.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" type="text/css" href="../../../script-dir/jquery-ui.min.css" title="Style">
 <link rel="stylesheet" type="text/css" href="../../../jquery-ui.overrides.css" title="Style">
 <script type="text/javascript" src="../../../script.js"></script>
-<script type="text/javascript" src="../../../script-dir/jquery-3.5.1.min.js"></script>
+<script type="text/javascript" src="../../../script-dir/jquery-3.6.0.min.js"></script>
 <script type="text/javascript" src="../../../script-dir/jquery-ui.min.js"></script>
 </head>
 <body class="package-tree-page">
@@ -54,6 +54,7 @@ loadScripts(document, 'script');</script>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" class="type-name-link external-link" title="class or interface in java.lang">Object</a>
 <ul>
 <li class="circle">growthbook.sdk.java.<a href="BucketRange.html" class="type-name-link" title="class in growthbook.sdk.java">BucketRange</a></li>
+<li class="circle">growthbook.sdk.java.<a href="DecryptionUtils.html" class="type-name-link" title="class in growthbook.sdk.java">DecryptionUtils</a></li>
 <li class="circle">growthbook.sdk.java.<a href="Experiment.html" class="type-name-link" title="class in growthbook.sdk.java">Experiment</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="ExperimentResult.html" class="type-name-link" title="class in growthbook.sdk.java">ExperimentResult</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="Feature.html" class="type-name-link" title="class in growthbook.sdk.java">Feature</a>&lt;ValueType&gt;</li>
