--- a/index-all.html
+++ b/index-all.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" type="text/css" href="script-dir/jquery-ui.min.css" title="Style">
 <link rel="stylesheet" type="text/css" href="jquery-ui.overrides.css" title="Style">
 <script type="text/javascript" src="script.js"></script>
-<script type="text/javascript" src="script-dir/jquery-3.5.1.min.js"></script>
+<script type="text/javascript" src="script-dir/jquery-3.6.0.min.js"></script>
 <script type="text/javascript" src="script-dir/jquery-ui.min.js"></script>
 </head>
 <body class="index-page">
@@ -83,6 +83,12 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">A data type class used internally to help evaluate conditions</div>
 </dd>
+<dt><a href="growthbook/sdk/java/DecryptionUtils.html#decrypt(java.lang.String,java.lang.String)" class="member-name-link">decrypt(String, String)</a> - Static method in class growthbook.sdk.java.<a href="growthbook/sdk/java/DecryptionUtils.html" title="class in growthbook.sdk.java">DecryptionUtils</a></dt>
+<dd>&nbsp;</dd>
+<dt><a href="growthbook/sdk/java/DecryptionUtils.html" class="type-name-link" title="class in growthbook.sdk.java">DecryptionUtils</a> - Class in <a href="growthbook/sdk/java/package-summary.html">growthbook.sdk.java</a></dt>
+<dd>&nbsp;</dd>
+<dt><a href="growthbook/sdk/java/DecryptionUtils.html#%3Cinit%3E()" class="member-name-link">DecryptionUtils()</a> - Constructor for class growthbook.sdk.java.<a href="growthbook/sdk/java/DecryptionUtils.html" title="class in growthbook.sdk.java">DecryptionUtils</a></dt>
+<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/FeatureResultSource.html#DEFAULT_VALUE" class="member-name-link">DEFAULT_VALUE</a> - Enum constant in enum class growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureResultSource.html" title="enum class in growthbook.sdk.java">FeatureResultSource</a></dt>
 <dd>
 <div class="block">When the value is assigned due to a default value condition</div>
@@ -195,7 +201,7 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">Context object passed into the GrowthBook constructor.</div>
 </dd>
-<dt><a href="growthbook/sdk/java/GBContext.html#%3Cinit%3E(java.lang.String,java.lang.String,java.lang.Boolean,java.lang.Boolean,java.lang.String,java.util.Map,growthbook.sdk.java.TrackingCallback)" class="member-name-link">GBContext(String, String, Boolean, Boolean, String, Map&lt;String, Integer&gt;, TrackingCallback)</a> - Constructor for class growthbook.sdk.java.<a href="growthbook/sdk/java/GBContext.html" title="class in growthbook.sdk.java">GBContext</a></dt>
+<dt><a href="growthbook/sdk/java/GBContext.html#%3Cinit%3E(java.lang.String,java.lang.String,java.lang.String,java.lang.Boolean,java.lang.Boolean,java.lang.String,java.util.Map,growthbook.sdk.java.TrackingCallback)" class="member-name-link">GBContext(String, String, String, Boolean, Boolean, String, Map&lt;String, Integer&gt;, TrackingCallback)</a> - Constructor for class growthbook.sdk.java.<a href="growthbook/sdk/java/GBContext.html" title="class in growthbook.sdk.java">GBContext</a></dt>
 <dd>
 <div class="block">The <a href="growthbook/sdk/java/GBContext.GBContextBuilder.html" title="class in growthbook.sdk.java"><code>GBContext.GBContextBuilder</code></a> is recommended for constructing a Context.</div>
 </dd>
