--- a/overview-tree.html
+++ b/overview-tree.html
@@ -58,7 +58,6 @@ loadScripts(document, 'script');</script>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" class="type-name-link external-link" title="class or interface in java.lang">Object</a>
 <ul>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/BucketRange.html" class="type-name-link" title="class in growthbook.sdk.java">BucketRange</a></li>
-<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/DecryptionUtils.html" class="type-name-link" title="class in growthbook.sdk.java">DecryptionUtils</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Experiment.html" class="type-name-link" title="class in growthbook.sdk.java">Experiment</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/ExperimentResult.html" class="type-name-link" title="class in growthbook.sdk.java">ExperimentResult</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Feature.html" class="type-name-link" title="class in growthbook.sdk.java">Feature</a>&lt;ValueType&gt;</li>
@@ -66,8 +65,19 @@ loadScripts(document, 'script');</script>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureRule.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureRule</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GBContext.html" class="type-name-link" title="class in growthbook.sdk.java">GBContext</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GBContext.GBContextBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">GBContext.GBContextBuilder</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GBFeaturesRepository.html" class="type-name-link" title="class in growthbook.sdk.java">GBFeaturesRepository</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GrowthBook.html" class="type-name-link" title="class in growthbook.sdk.java">GrowthBook</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Namespace.html" class="type-name-link" title="class in growthbook.sdk.java">Namespace</a></li>
+<li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Throwable.html" class="type-name-link external-link" title="class or interface in java.lang">Throwable</a> (implements java.io.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/io/Serializable.html" title="class or interface in java.io" class="external-link">Serializable</a>)
+<ul>
+<li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Exception.html" class="type-name-link external-link" title="class or interface in java.lang">Exception</a>
+<ul>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureFetchException.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureFetchException</a></li>
+</ul>
+</li>
+</ul>
+</li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Version.html" class="type-name-link" title="class in growthbook.sdk.java">Version</a></li>
 </ul>
 </li>
 </ul>
@@ -76,6 +86,7 @@ loadScripts(document, 'script');</script>
 <h2 title="Interface Hierarchy">Interface Hierarchy</h2>
 <ul>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/ExperimentRunCallback.html" class="type-name-link" title="interface in growthbook.sdk.java">ExperimentRunCallback</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureRefreshCallback.html" class="type-name-link" title="interface in growthbook.sdk.java">FeatureRefreshCallback</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/TrackingCallback.html" class="type-name-link" title="interface in growthbook.sdk.java">TrackingCallback</a></li>
 </ul>
 </section>
@@ -87,6 +98,7 @@ loadScripts(document, 'script');</script>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Enum.html" class="type-name-link external-link" title="class or interface in java.lang">Enum</a>&lt;E&gt; (implements java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Comparable.html" title="class or interface in java.lang" class="external-link">Comparable</a>&lt;T&gt;, java.lang.constant.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/constant/Constable.html" title="class or interface in java.lang.constant" class="external-link">Constable</a>, java.io.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/io/Serializable.html" title="class or interface in java.io" class="external-link">Serializable</a>)
 <ul>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/DataType.html" class="type-name-link" title="enum class in growthbook.sdk.java">DataType</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureFetchException.FeatureFetchErrorCode.html" class="type-name-link" title="enum class in growthbook.sdk.java">FeatureFetchException.FeatureFetchErrorCode</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureResultSource.html" class="type-name-link" title="enum class in growthbook.sdk.java">FeatureResultSource</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Operator.html" class="type-name-link" title="enum class in growthbook.sdk.java">Operator</a></li>
 </ul>
